# steam-cli

./: .gitignore  AGENTS.md  CLAUDE.md  DECISIONS.md  LICENSE  README.md  README.ru.md  pyproject.toml  steam_cli.py
.boardown/: config.yaml
.boardown/epics/: ideas.md
.boardown/releases/: active-2.md  active-3.md  active.md
LESSONS/: INDEX.md  L-0001-getsupportedapilist-incomplete.md  L-0002-global-install-stale-after-cli-change.md  L-0003-decision-propagation-partial-across-stores.md
skill/: SKILL.md  setup.md
tests/: conftest.py  test_steam_cli.py
tests/fixtures/: achievements_440.json  appdetails_1145360.json  appreviewhistogram_1145360.json  appreviews_1145360.json  apptags_1145360.html  morelike_1145360.html  news_570.json  players_570.json  populartags.json  search_results_cozy.json  storesearch_hades.json  wishlist_reporting.json
