[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-cli"
version = "1.3.2"
description = "Query the public Steam API (overview, reviews, info, prices, players, news, achievements, sales, profiles, tags, niche browse, similar games, review history). Stdlib-only Python 3 CLI."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Дмитрий Зайцев"}]
keywords = ["steam", "steam-api", "reviews", "gamedev", "cli", "appdetails"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Games/Entertainment",
    "Topic :: Internet :: WWW/HTTP",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/dim-s/steam-cli"
Issues = "https://github.com/dim-s/steam-cli/issues"
Repository = "https://github.com/dim-s/steam-cli"

[project.scripts]
steam-cli = "steam_cli:main"

[tool.setuptools]
py-modules = ["steam_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
